# opencv-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp  test.h
data/: test.yml
test/: CMakeLists.txt  DisplayImage.cpp  FileStorage.cpp  ObjectType.cpp  ReadVideo.cpp  ReadWriteImage.cpp  test.hpp
utils/: CMakeLists.txt  logger.cpp  logger.h  plotting.cpp
